<resources>
    <string name="app_name">Daily Nutrition Recorder</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_your_meal">Add your meal...</string>
    <string name="enter_item">Enter item</string>
    <string name="food_name_here">Food Description here</string>
    <string name="quantity_goes_here">Enter item quantity</string>
    <string name="or">OR</string>
    <string name="enter_item_weight_in_gram">Enter item weight (in grams)</string>
    <string name="save">SAVE</string>
    <string name="sure">Are you sure to delete this item?</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="update">UPDATE</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="before_you_start">Before you start\nPlease enter your basic information.</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="weight_in_kilograms">Weight (in kilograms)</string>
    <string name="height_in_meters">Height (in meters)</string>
    <string name="caution">Nutritional Needs calculations are based on National Institutes of Health/Institute of Medicine Healthy Macronutrient Distribution and provided by Welltech Solutions. Calculators are appropriate for healthy, non-pregnant adults 19 and older.</string>
    <string name="today_s_calories">Today\'s Calories:</string>
    <string name="hi">Hi,</string>
    <string name="proteins">Proteins</string>
    <string name="textview">TextView</string>
    <string name="required_ntoday">Required\ntoday</string>
    <string name="carbohydrates">Carbohydrates</string>
    <string name="fats">Fats</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="adding_alert">Add this item to Favourite?</string>
    <string name="choose_from_my_favourite_list">Choose From My Favourite</string>
    <string name="input_food_manually">Input Food Manually</string>
    <string name="save_this_food_to_my_favourite">Save This Food To My Favourite</string>
    <string name="carbohydrate_in_grams_100g">Carbohydrate (in grams) / 100g</string>
    <string name="fat_in_grams_100g">Fat (in grams) / 100g</string>
    <string name="protein_in_grams_100g">Protein (in grams) / 100g</string>
</resources>
