<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/header"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/header_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/baloo"
        android:text="@string/hi"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/carbohydrates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="8dp"
        android:text="@string/carbohydrates"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caloriesText" />

    <TextView
        android:id="@+id/caloriesText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif"
        android:text="@string/today_s_calories"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/header_title"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/header_title"
        app:layout_constraintTop_toBottomOf="@+id/header_title" />

    <TextView
        android:id="@+id/proteins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/proteins"
        app:layout_constraintStart_toEndOf="@+id/carbohydrates"
        app:layout_constraintTop_toTopOf="@+id/carbohydrates" />

    <TextView
        android:id="@+id/fats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:text="@string/fats"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toEndOf="@+id/proteins"
        app:layout_constraintTop_toTopOf="@+id/proteins" />

    <TextView
        android:id="@+id/required"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/required_ntoday"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carbohydrates" />

    <TextView
        android:id="@+id/carboRange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/textview"
        app:layout_constraintBottom_toBottomOf="@+id/required"
        app:layout_constraintEnd_toEndOf="@+id/carbohydrates"
        app:layout_constraintStart_toStartOf="@+id/carbohydrates"
        app:layout_constraintTop_toBottomOf="@+id/carbohydrates"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/proteinRange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/textview"
        app:layout_constraintBottom_toBottomOf="@+id/carboRange"
        app:layout_constraintEnd_toEndOf="@+id/proteins"
        app:layout_constraintStart_toStartOf="@+id/proteins"
        app:layout_constraintTop_toBottomOf="@+id/proteins"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/fatsRange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/textview"
        app:layout_constraintBottom_toBottomOf="@+id/carboRange"
        app:layout_constraintEnd_toEndOf="@+id/fats"
        app:layout_constraintStart_toStartOf="@+id/fats"
        app:layout_constraintTop_toBottomOf="@+id/fats"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>