<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/viberate_color"
    tools:context=".UserInfoActivity">

    <TextView
        android:id="@+id/welcomeTitle"
        android:layout_width="179dp"
        android:layout_height="67dp"
        android:fontFamily="@font/baloo"
        android:text="@string/welcome"
        android:textColor="@color/colorAccent"
        android:textSize="36sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.050000012" />

    <TextView
        android:id="@+id/welcomeHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/before_you_start"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/nameInput"
        app:layout_constraintTop_toBottomOf="@+id/welcomeTitle" />

    <EditText
        android:id="@+id/nameInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeHint" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/nameInput"
        app:layout_constraintTop_toBottomOf="@+id/nameInput" />

    <EditText
        android:id="@+id/ageInput"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/age"
        android:inputType="numberSigned|number"
        app:layout_constraintBottom_toBottomOf="@+id/spinner"
        app:layout_constraintEnd_toEndOf="@+id/nameInput"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/spinner" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="205dp" />

    <EditText
        android:id="@+id/weightInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/weight_in_kilograms"
        android:importantForAutofill="no"
        android:inputType="numberSigned|numberDecimal"
        app:layout_constraintEnd_toEndOf="@+id/ageInput"
        app:layout_constraintStart_toStartOf="@+id/spinner"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <EditText
        android:id="@+id/heightInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/height_in_meters"
        android:inputType="numberSigned|numberDecimal"
        app:layout_constraintEnd_toEndOf="@+id/weightInput"
        app:layout_constraintStart_toStartOf="@+id/weightInput"
        app:layout_constraintTop_toBottomOf="@+id/weightInput" />

    <Spinner
        android:id="@+id/activityPicker"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/heightInput"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/heightInput"
        app:layout_constraintTop_toBottomOf="@+id/heightInput" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/colorAccent"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/activityPicker"
        app:layout_constraintStart_toStartOf="@+id/activityPicker"
        app:layout_constraintTop_toBottomOf="@+id/activityPicker"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>